--- a/app/public/home.html
+++ b/app/public/home.html
@@ -34,7 +34,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/autos">API Friends List</a> | <a href="https://github.com/limbert08">GitHub Repo</a></p>
+        <p><a href="/api/autos">API LIST autos</a> | <a href="https://github.com/limbert08">GitHub Repo</a></p>
       </div>
     </footer>
 
