--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -161,7 +161,7 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/autos">API Friends List</a> | <a href="https://github.com/limbert08">GitHub Repo</a></p>
+        <p><a href="/api/autos">API List autos</a> | <a href="https://github.com/limbert08">GitHub Repo</a></p>
       </div>
     </footer>
 
